--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ name = "duplink"
 version = "0.1.0"
 authors = ["Akira Mizuno <akmizno@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "A CLI tool for finding duplicate files from directory tree and de-duplicating them."
+categories = ["command-line-utilities", "filesystem"]
+repository = "https://github.com/akmizno/duplink"
+license = "MIT"
 
 [dependencies]
