--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,17 @@ categories = ["command-line-utilities", "filesystem"]
 repository = "https://github.com/akmizno/duplink"
 license = "MIT/Apache-2.0"
 
+[profile.release]
+lto = true
+
 [dependencies]
+tokio = "1"
+clap = "2"
+log = "0.4"
+env_logger = "0.8"
+walkdir = "2"
+itertools = "0.10"
+twox-hash = "1"
+num_cpus = "1"
+fdlimit = "0.2"
+tempfile = "3"
