--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ lto = true
 [dependencies]
 tokio = { version = "1", features = ["fs", "io-util", "io-std", "macros", "rt-multi-thread", "sync"] }
 tokio-stream = "0.1"
+futures = "0.3"
+pin-project = "1"
 async-trait = "0.1"
 clap = "2"
 log = "0.4"
