Enable --show-output for cargo test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,5 +38,5 @@ jobs:
     - name: Build
       run: cargo build
     - name: Run tests
-      run: cargo test
+      run: cargo test -- --show-output
       continue-on-error: ${{ matrix.rust == 'nightly' }}
