--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,6 @@ atty = "0.2"
 
 [dev-dependencies]
 test-env-log = "0.2"
+
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+jemallocator = "0.3"
