--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ atty = "0.2"
 compact-rc = "0.3"
 
 [dev-dependencies]
-test-env-log = "0.2"
+test-log = "0.2"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemallocator = "0.3"
